# libcurl_ws

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp  websocketio.cpp  websocketio.h  wsocketframes.cpp  wsocketframes.h
include/: wsframe.h  wsio.h
src/: wsframe.cpp  wsio.cpp
